[gd_scene load_steps=4 format=3 uid="uid://e4iqm6cmxmur"]

[ext_resource type="Script" path="res://interact/interact_area.gd" id="1_2sbbb"]
[ext_resource type="Texture2D" uid="uid://dlorxcvsogl5h" path="res://assets/interact_marker.png" id="2_3pbvn"]
[ext_resource type="Texture2D" uid="uid://gq0qpahrmt2v" path="res://assets/interact_marker_freeze.png" id="3_ywouw"]

[node name="InteractArea" type="Area2D" groups=["interact"]]
script = ExtResource("1_2sbbb")

[node name="marker" type="Sprite2D" parent="."]
texture = ExtResource("2_3pbvn")

[node name="freeze_marker" type="Sprite2D" parent="."]
texture = ExtResource("3_ywouw")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
